# AI

./: .env.example  .gitignore  HOW_TO_RUN.md  README.md  pyproject.toml  requirements.txt  run.py  setup.bat  setup.sh  upload_instructions.md
examples/: custom_api_usage.py  example_usage.py  mcp_usage_example.py
src/: __init__.py  config.py  main.py  mcp_client.py
src/agent/: __init__.py  ai_agent.py
src/integrations/: __init__.py  adaptive_confluence.py  adaptive_jira.py  confluence_integration.py  custom_api.py  java_processor.py  jira_integration.py
